After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733814 - gst-launch: On W32 gst-launch does not finish correctly after getting SIGINT
gst-launch: On W32 gst-launch does not finish correctly after getting SIGINT
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-27 11:19 UTC by LRN
Modified: 2014-07-28 07:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Support SIGINT (Ctrl+C) on W32 (2.42 KB, patch)
2014-07-27 11:19 UTC, LRN
committed Details | Review

Description LRN 2014-07-27 11:19:35 UTC
Currently SIGINT handler is UNIX-only, because there's no SIGINT on W32.
An alternative for W32 is needed.
Comment 1 LRN 2014-07-27 11:19:38 UTC
Created attachment 281808 [details] [review]
Support SIGINT (Ctrl+C) on W32

W32 has no SIGINT, but it does have SetConsoleCtrlHandler(), which sets up
a handler for Ctrl+C.
Comment 2 LRN 2014-07-27 11:20:54 UTC
Note that W32 creates a new thread to run the handler function. Hopefully, the function that the handler calls is thread-safe...
Comment 3 Sebastian Dröge (slomo) 2014-07-28 07:22:40 UTC
On Unix the signal handlers are called from a random thread too, so that should be fine.

commit 35fc309544099b52a46267ffbf85c1d6a3fcf2b5
Author: Руслан Ижбулатов <lrn1986@gmail.com>
Date:   Sun Jul 27 02:37:08 2014 +0000

    gst-launch: Support SIGINT (Ctrl+C) on W32
    
    W32 has no SIGINT, but it does have SetConsoleCtrlHandler(), which sets up
    a handler for Ctrl+C.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=733814